--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = smacc
-version = attr: package.__version__
+version = 0.0.1
 author = Remington Mallett
 author_email = mallett.remy@gmail.com
 description = Sleep manipulation and communication clickything
@@ -20,16 +20,12 @@ classifiers =
     Intended Audience :: Science/Research
 
 [options]
-package_dir =
-    = smacc
-packages = find:
-include_package_data = True
 python_requires = >=3.6
 install_requires =
     numpy
-    psychopy
     PyQt5
     scipy
 
-[options.packages.find]
-where = smacc
+[options.extras_require]
+port_triggers =
+    psychopy
