--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
     Intended Audience :: Science/Research
 
 [options]
-python_requires = >=3.6
+python_requires = 3.8
 install_requires =
     numpy
     PyQt5
