--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = smacc
-version = 0.0.2
+version = 0.0.3
 author = Remington Mallett
 author_email = mallett.remy@gmail.com
 description = Sleep manipulation and communication clickything
@@ -20,7 +20,7 @@ classifiers =
     Intended Audience :: Science/Research
 
 [options]
-python_requires = 3.8
+python_requires = ==3.8.*
 install_requires =
     numpy
     PyQt5
