--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = smacc
-version = 0.0.5
+version = 0.0.5.1
 author = Remington Mallett
 author_email = mallett.remy@gmail.com
 description = Sleep manipulation and communication clickything
@@ -23,6 +23,6 @@ classifiers =
 python_requires = ==3.8.*
 install_requires =
     numpy
+    pylsl
     PyQt5
     scipy
-    psychopy
